rns-lang/tests/snapshots/parser-outside_class_directive-close_paren_outside.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
)   
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected symbol
   ╭─[ test_data/integration/parser/outside_class_directive/close_paren_outside.ja:1:1 ]
   │
 1 │ )
   │ ┬  
   │ ╰── The ')' symbol cannot appear before a class is defined.
   │ 
   │ Note: A Java assembly file must start with a '.class' definition.
───╯
